# workspaceguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
docs/: concepts.md  getting-started.md
docs/integrations/: backends.md  ci.md
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-usage-report/: report.py
python/examples/02-ci-gate-quota-check/: gate.py
python/examples/03-agent-native-json/: agent_report.py
python/src/workspaceguard/: __init__.py  circuit_breaker.py  cli.py  config.py  isolation_guard.py  log.py  namespace.py  types.py  usage.py  vault.py
python/src/workspaceguard/adapters/: __init__.py  mock.py
python/tests/: test_cli.py  test_isolation_guard.py  test_usage.py
src/: index.ts
src/adapters/: mock.ts
src/cli/: index.ts
src/core/: circuit-breaker.ts  config.ts  isolation-guard.test.ts  isolation-guard.ts  lock.ts  log.ts  namespace.ts  types.ts  usage.test.ts  usage.ts  vault.ts
